# tinyBlog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_html.c  create_html.h  makefile  tinyblog.c  utils.c  utils.h
src/: create_html.c  create_html.h  main.c  thttpd.c  thttpd.h  tinyblog.c  tversion.h
src/utils/: targs.c  tconfigure.c  tmkd.c  utils.c  utils.h
templates/: configure.json  index.html
templates/themes/default/: index.html
templates/themes/pop-blue/: home-style.css  index.html  list-style.css  mkd-style.css
